Antes Reformulação clientes

--- a/producao/templates/producao/arracoamento_diario.html
+++ b/producao/templates/producao/arracoamento_diario.html
@@ -51,8 +51,8 @@
                             <th scope="col">Seq.</th>
                             <th scope="col">Ração Sugerida</th>
                             <th scope="col">Ração Realizada</th>
-                            <th scope="col">Qtd. Sugerida (g)</th>
-                            <th scope="col">Qtd. Real (g)</th>
+                            <th scope="col">Qtd. Sugerida(kg)</th>
+                            <th scope="col">Qtd. Real(kg)</th>
                             <th scope="col">Status</th>
                         </tr>
                     </thead>
@@ -64,7 +64,7 @@
                     </tbody>
                     <tfoot>
                         <tr class="table-light fw-bold">
-                            <td colspan="8" class="text-end">Totais (kg):</td>
+                            <td colspan="9" class="text-end">Totais (kg):</td>
                             <td id="total-sugerido" class="text-center">0.000</td>
                             <td id="total-real" class="text-center">0.000</td>
                             <td></td>
