--- a/producao/templates/producao/suporte/tipotanque_form.html
+++ b/producao/templates/producao/suporte/tipotanque_form.html
@@ -1,7 +1,7 @@
 <div id="identificador-tela" data-tela="form_tipotanque">
     <div class="container-fluid mt-4">
         <h2>{% if object %}Editar Tipo de Tanque{% else %}Novo Tipo de Tanque{% endif %}</h2>
-        <form method="post" class="ajax-form" data-redirect-url="{% url 'producao:lista_tipostanque' %}">
+        <form method="post" class="ajax-form" data-redirect-url="{% url 'producao:lista_tipostanque' %}" data-response-type="json">
             {% csrf_token %}
             {{ form.as_p }}
             <button type-="submit" class="btn btn-success">Salvar</button>
