--- a/templates/partials/accounts/lista_grupos.html
+++ b/templates/partials/accounts/lista_grupos.html
@@ -34,7 +34,7 @@
             </div>
           </div>
           <div class="card-body p-0">
-            <form id="grupos-form" method="POST" class="ajax-form">
+            <form id="grupos-form" method="POST" class="ajax-form" data-response-type="json">
                 {% csrf_token %}
                 <div class="table-responsive">
                     <table class="table table-hover align-middle mb-0">
