--- a/producao/templates/producao/suporte/faseproducao_form.html
+++ b/producao/templates/producao/suporte/faseproducao_form.html
@@ -1,7 +1,7 @@
 <div id="identificador-tela" data-tela="form_faseproducao">
     <div class="container-fluid mt-4">
         <h2>{% if object %}Editar Fase de Produção{% else %}Nova Fase de Produção{% endif %}</h2>
-        <form method="post" class="ajax-form" data-redirect-url="{% url 'producao:lista_fasesproducao' %}">
+        <form method="post" class="ajax-form" data-redirect-url="{% url 'producao:lista_fasesproducao' %}" data-response-type="json">
             {% csrf_token %}
             {{ form.as_p }}
             <button type-="submit" class="btn btn-success">Salvar</button>
