--- a/templates/accounts/password_reset_choose_method.html
+++ b/templates/accounts/password_reset_choose_method.html
@@ -8,7 +8,7 @@
         <p class="text-muted text-center">Um usuário com o e-mail <strong>{{ email }}</strong> foi encontrado.</p>
         <p class="text-muted text-center">Como você gostaria de receber o link de redefinição de senha?</p>
 
-        <form method="post" class="ajax-form" data-url="{% url 'accounts:password_reset' %}">
+        <form method="post" class="ajax-form" data-url="{% url 'accounts:password_reset' %}" data-response-type="json">
           {% csrf_token %}
           <input type="hidden" name="email" value="{{ email }}">
           {{ form.email.as_hidden }}
