--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 
   <!--  Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   
 
   <!-- Select2 CSS (depois do Bootstrap) -->
@@ -72,8 +73,18 @@
 
   <!--  Plugins e scripts principais do sistema -->
   
-  <script src="{% static 'js/scripts.js' %}" defer></script>
+  <script src="{% static 'js/empresa_avancada_form.js' %}" defer></script>
+  <script src="{% static 'js/lancar_nota_manual.js' %}" defer></script>
+  <script src="{% static 'js/gerenciar_curvas.js' %}" defer></script>
+  <script src="{% static 'js/gerenciar_tanques.js' %}" defer></script>
+  <script src="{% static 'js/gerenciar_eventos.js' %}" defer></script>
+  <script src="{% static 'js/arracoamento_diario.js' %}" defer></script>
+  <script src="{% static 'js/nota_fiscal_entradas.js' %}" defer></script>
+  <script src="{% static 'js/relatorios/notas_entradas.js' %}" defer></script>
+  <script src="{% static 'js/povoamento_lotes.js' %}" defer></script>
+  <script src="{% static 'js/importar_xml.js' %}" defer></script>
   <script src="{% static 'js/permissions.js' %}" defer></script>
+  <script src="{% static 'js/scripts.js' %}" defer></script>
   
 
 
